--- a/src/components/TodoItem.css
+++ b/src/components/TodoItem.css
@@ -1,13 +1,26 @@
 .TodoItem {
     font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 1.4em;
-    background: #f5f5f5;
     color: #4d4d4d;
     min-width: 230px;
     max-width: 550px;
     margin: 0 auto;
+    padding: 10px 5px;
+    border-bottom: 1px solid #eee;
+    display: flex;
 }
-.TodoItem-done {
+
+.TodoItem:last-child {
+    border-bottom: none;
+}
+
+.TodoItem > p {
+    margin: 0 0 0 15px;
+    font-size: 20px;
+    padding-top: 8px;
+}
+
+.TodoItem-done >p {
     text-decoration: line-through;
     opacity: 0.3;
 }
