--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,59 @@
 .App {
-  text-align: center;
+  width: 500px;
+  margin: auto;
+  border: 1px solid #eee;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App .Header {
+  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    line-height: 1.4em;
+    color: #4d4d4d;
+    min-width: 230px;
+    max-width: 550px;
+    margin: 0 auto;
+    padding: 10px 5px;
+    border-bottom: 1px solid #eee;
+    display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App .Header input {
+  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
+    color: #4d4d4d;
+    width: 100%;
+    margin-left: 10px;
+    border: none;
+    font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+::placeholder {
+  opacity: 0.5;
+  font-style: italic;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .Header input:focus {
+  outline: none;
 }
+
+.App .Footer {
+  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    line-height: 1.4em;
+    color: #4d4d4d;
+    min-width: 230px;
+    max-width: 550px;
+    margin: 0 auto;
+    padding: 10px 5px;
+    border-bottom: 1px solid #eee;
+    display: flex;
+    justify-content: center;
+    
+}
+.App .Footer div {
+  margin: 0 10px;
+  padding: 5px;
+}
+
+.App .Footer div:hover {
+  border: 1px solid #EEE;
+}
+
